dist/LineScript-win64-20260616/tests/cases/compile_fail/free_console_bad_arity.lsc
main() -> i64 do
  .freeConsole(1)
  return 0
end
